Allow Vercel origins for CORS